samples/_failures_safe/1761077833_a6df15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1aff0e1.c: In function ‘main’:
./samples/SAFE/__tmp_a1aff0e1.c:128:19: error: expected ‘)’ at end of input
  128 |             if (op
      |                ~  ^
      |                   )
./samples/SAFE/__tmp_a1aff0e1.c:128:13: error: expected declaration or statement at end of input
  128 |             if (op
      |             ^~
./samples/SAFE/__tmp_a1aff0e1.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1aff0e1.c:128:13: error: expected declaration or statement at end of input
